2010-12-09 Malignant Manor <malignantmanor@users.sourceforge.net>
	* schedule.cc: Make more schedule created items temporary
	* added Exult.exe to the trunk's svn:ignore

2010-12-09 Dominik Reichardt <dominus@users.sourceforge.net>
	* paths.cc: fixed talking through locked doors. If NPCs can't pathfind to you, no conversation (thanks to Malignant Manor)
	* actors.cc, gumps/Face_stats.cc: applied highlight patch #3132882 to match the order with the original (also thanks to Malignant Manor)
	
2010-12-06 Dominik Reichardt <dominus@users.sourceforge.net>
	* data/si/autonotes.txt, content/sifixes/src/header/si/si_gflags.uc: corrections 
	  about some flags set when talking to Harnna

2010-11-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs/spellbook.cc: fix mana cost check (thanks malignantmanor; #3001287)
	* actors.cc: don't make dying party members call guards
	  (thanks malignantmanor; #3011711)

2010-11-20 Dominik Reichardt <dominus@users.sourceforge.net>
	* configure.ac, Makefile.common, msvc9/msvc_kludges.h, msvcstuff/msvc_kludges.h, 
	  win32/*.rc: changed version number to 1.5.0svn - the idea is to have even version 
	  numbers for final releases.
	* cheat.cc, usecode/intrinsics.cc: location cross on normal and cheat map is yellow again

2010-11-11  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* desktop/exult.desktop: apply changes from gentoo's exult package

2010-10-31  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs/eggs.cc, gameclk.cc: match night time with original (bug #3099477)

2010-10-30  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs/eggs.cc: fix nocturnal egg 12h/24h confusion. (Thanks to Malignant
	Manor on the forum)

2010-10-20  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* scale_*.cc: add missing guard bands. This should fix artifacts along the
	  bottom edge of the screen.

2010-10-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>